# Aunic

./: .gitattributes  .gitignore  pyproject.toml
notes-and-plans/: aunic-thesis.md  context-size.md  image-support.md  improvements.md  indicator-area.md  run-guide.md
notes-and-plans/UI/: terminal-ui.md
notes-and-plans/active-markdown-note/: active-markdown-note.md
notes-and-plans/building-context/: building-context.md  parsing-edit-commands.md  transcript-to-api.md
notes-and-plans/modes/: modes.md
tests/: test_browser_cli.py  test_browser_e2e.py  test_browser_file_watch.py  test_browser_messages.py  test_browser_paths.py  test_browser_session.py  test_browser_session_registry.py  test_browser_wire_parity.py  test_chat_mode.py  test_chat_mode_cli.py  test_claude_client.py  test_claude_provider.py  test_codex_provider.py  test_context_cli.py  test_context_engine.py  test_context_file_manager.py  test_context_markers.py  test_discovery.py  test_envelope.py  test_file_ui_state.py  test_filesystem_tools.py  test_grep_notes.py  test_integration_smoke.py  test_llama_provider.py  test_loop_runner_structured.py  test_map_builder.py  test_map_render.py  test_map_runtime.py  test_map_save_hook.py  test_map_snippet.py  test_mcp_config.py  test_mcp_tools.py  test_memory_manifest.py  test_note_edit_tools.py  test_note_mode.py  test_note_mode_cli.py  test_note_tables.py  test_ollama_embeddings.py  test_plan_tools.py  test_planning_state.py  (+25 more)
web/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
(+277 files in other folders)
