[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "aunic"
version = "0.1.0"
description = "Aunic note and chat runtime"
readme = "notes-and-plans/update-plans/v1-plans/update-guide.md"
requires-python = ">=3.13"
dependencies = [
  "bashlex>=0.18,<1",
  "claude-agent-sdk>=0.1",
  "httpx>=0.28,<1",
  "markdown-it-py>=3.0,<4",
  "mcp>=1.26,<2",
  "nbformat>=5.10,<6",
  "Pillow>=11.0,<12",
  "pypdf>=5.0,<6",
  "prompt_toolkit>=3.0.48,<4",
  "trafilatura>=2.0,<3",
  "watchfiles>=1.1,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
]

[project.scripts]
aunic = "aunic.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aunic"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "integration: requires local services or an authenticated Codex session",
]
testpaths = ["tests"]
